--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@edge-ui/react": "*",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.22",
