--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,6 +32,7 @@
         "@types/node": "^18.7.5",
         "@types/react": "^18.0.21",
         "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "tailwindcss": "^3.1.8",
         "tsup": "^6.2.3",
         "typescript": "^4.7.4"
@@ -40,7 +41,28 @@
         "react": "^18.2.0"
     },
     "dependencies": {
+        "@radix-ui/react-accordion": "^1.1.1",
+        "@radix-ui/react-alert-dialog": "^1.0.3",
+        "@radix-ui/react-avatar": "^1.0.2",
+        "@radix-ui/react-context-menu": "^2.1.3",
+        "@radix-ui/react-dialog": "^1.0.3",
+        "@radix-ui/react-hover-card": "^1.0.5",
+        "@radix-ui/react-menubar": "^1.0.2",
+        "@radix-ui/react-navigation-menu": "^1.1.2",
+        "@radix-ui/react-progress": "^1.0.2",
+        "@radix-ui/react-scroll-area": "^1.0.3",
+        "@radix-ui/react-select": "^1.2.1",
+        "@radix-ui/react-separator": "^1.0.2",
+        "@radix-ui/react-switch": "^1.0.2",
+        "@radix-ui/react-tabs": "^1.0.3",
+        "@radix-ui/react-toast": "^1.1.3",
+        "@radix-ui/react-tooltip": "^1.0.5",
         "class-variance-authority": "^0.5.2",
-        "tailwind-merge": "^1.12.0"
+        "clsx": "^1.2.1",
+        "date-fns": "^2.29.3",
+        "lucide-react": "^0.176.0",
+        "react-day-picker": "^8.7.1",
+        "tailwind-merge": "^1.12.0",
+        "tailwindcss-animate": "^1.0.5"
     }
 }
