--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
     "prettier": "^2.7.1",
     "turbo": "latest"
   },
-  "packageManager": "yarn@4.0.0-rc.42"
+  "packageManager": "yarn@3.5.0"
 }
