--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -62,6 +62,7 @@
         "clsx": "^1.2.1",
         "date-fns": "^2.29.3",
         "lucide-react": "^0.176.0",
+        "prism-react-renderer": "^2.0.3",
         "react-day-picker": "^8.7.1",
         "tailwind-merge": "^1.12.0",
         "tailwindcss-animate": "^1.0.5"
