--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@edge-ui/react": "*",
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.3.3",
     "next": "^13.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "18.7.22",
