--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@edge-ui/react",
-  "version": "0.0.4",
-  "description": "EdgeUI react components",
-  "author": "skdhg",
-  "homepage": "https://github.com/skdhg/edge-ui",
+  "version": "0.0.5",
+  "description": "Minimal UI components library for react",
+  "author": "neplextech",
+  "homepage": "https://ui.neplextech.com",
   "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -17,7 +17,7 @@
     "./styles.css": "./dist/styles.css"
   },
   "scripts": {
-    "build": "tsup --external react && tailwindcss -i ./src/styles.css -o ./dist/styles.css",
+    "build": "tsup --external react && node ./scripts/esm.js && tailwindcss -i ./src/styles.css -o ./dist/styles.css",
     "tscheck": "tsc --noEmit",
     "prepublish": "yarn build",
     "storybook": "storybook dev -p 6006",
@@ -28,10 +28,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/skdhg/edge-ui.git"
+    "url": "git+https://github.com/neplextech/edge-ui.git"
   },
   "bugs": {
-    "url": "https://github.com/skdhg/edge-ui/issues"
+    "url": "https://github.com/neplextech/edge-ui/issues"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.5",
@@ -47,7 +47,6 @@
     "@storybook/testing-library": "0.0.14-next.2",
     "@types/node": "^18.7.5",
     "@types/react": "^18.0.21",
-    "cmdk": "^0.2.0",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -81,6 +80,7 @@
     "@radix-ui/react-tooltip": "^1.0.5",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "date-fns": "^2.29.3",
     "lucide-react": "^0.176.0",
     "prism-react-renderer": "^2.0.3",
