--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -15,6 +15,7 @@
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "emitDeclarationOnly": true,
+        "isolatedModules": true
     },
     "include": ["src/**/*", "postcss.config.js"],
     "exclude": ["node_modules"]
