--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -59,6 +59,7 @@
     "react": "^18.2.0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.2",
@@ -76,6 +77,7 @@
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slider": "^1.1.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
@@ -88,7 +90,9 @@
     "lucide-react": "^0.176.0",
     "prism-react-renderer": "^2.0.3",
     "react-day-picker": "^8.7.1",
+    "react-hook-form": "^7.45.0",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "zod": "^3.21.4"
   }
 }
